telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestPathInheritance.java
package tutu.titi.toto;

class A {
	static class B {}
	static class C extends B {}

}

class Z extends A.C {}

